--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
-    - name: Tzst with Gradle Wrapper
+    - name: Test with Gradle Wrapper
       run: ./gradlew test
