--- a/candycrush/build.gradle
+++ b/candycrush/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation('be.kuleuven:ses_opdracht_gradle:1.0-SNAPSHOT')
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    testImplementation("org.assertj:assertj-core:3.25.1")
 }
 
 test {
